--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <main>
+    <section class="section-left">
+      <img src="images/phones.png" alt="Product Photo">
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section class="section-right">
+      <nav>
+        <img src="images/brand.png" alt="Instagram">
+        <button class="home">
+          <img src="images/home.png" alt="Home">
+          <span>Login</span>
+        </button>
+      </nav>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <article>
+        <h1>Capture and Share
+          <br>the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a
+          <b>fast</b>,
+          <b>beautiful</b> and
+          <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+        <a href="#">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+        </a>
+        <a href="#">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </a>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <ul>
+      <li>
+        <a href="#">About Us</a>
+      </li>
+      <li>
+        <a href="#">Support</a>
+      </li>
+      <li>
+        <a href="#">Blog</a>
+      </li>
+      <li>
+        <a href="#">Press</a>
+      </li>
+      <li>
+        <a href="#">API</a>
+      </li>
+      <li>
+        <a href="#">Jobs</a>
+      </li>
+      <li>
+        <a href="#">Privacy</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
 </body>
+
 </html>
