--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+ <title>Instagram</title>
+ <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<div class="container">
+<div class="phone">
+ <img src="./images/phones.png">
+</div>
 
-  Capture and Share the World's Moments
+<div class="text">
+ <div class="header">
+   <div class="logo">
+     <img src="./images/brand.png">
+   </div>
+ 
+   <div class="login-button">
+     <img src="./images/home.png">
+     <span>Log in</span>
+   </div>
+ </div> 
+ 
+ <div class="details">
+   <h2>Capture and Share <br/> the World's Moments</h2>
+   <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+   <p>Oh yeah, did we mention it's free?</p>
+   <div class="buttons">
+       <img src="./images/badge-iphone.png">
+       <img src="./images/badge-android.png">
+   </div>
+ </div>
+ 
+</div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+ <footer>
+   <ul>
+     <li>About Us</li>
+     <li>Support</li>
+     <li>Blog</li>
+     <li>Press</li>
+     <li>API</li>
+     <li>Jobs</li>
+     <li>Privacy</li>
+     <li>Terms</li>
+     <li class="copyright">&copy; 2014 Instagram</li>
+   </ul>
+ </footer>
+<div class="white-box">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
