--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="box">
+  <div class="phonePadding">
+      <img class="imagesleft" src="images/phones.png">
+  </div  >
+      <div class="brandtext">
+        <img class="imagesleft" src="images/brand.png"> 
+        <button class="button">
+            <img class="imagesleft marginHome" src="images/home.png"> <h4 class="imagesleft marginText">Log in</h4>
+        </button>
+      </div >
+    <div class="boxtext">
+  <h2 >Capture and Share <br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> 
+  with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look <br> 
+  and feel, then post to Instagram &mdash; it's that easy. You can<br> 
+   even share to Facebook, Twitter, Tumblr and more. It's a
+   <br> new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
+<div>
+    <a href="url"><img  src="images/badge-iphone.png"> </a>
+    <a href="url"><img  src="images/badge-android.png"> </a>
+</div>
+  </div>
+</div>
 
-  Oh yeah, did we mention it's free?
+<footer class="clearfix footerStyle">
+ <a href = "url" class="styleLink">  ABOUT US </a>
+ <a href = "url" class="styleLink">  SUPPORT</a>
+ <a href = "url" class="styleLink">  BLOG</a>
+ <a href = "url" class="styleLink">  PRESS</a>
+ <a href = "url" class="styleLink">  API</a>
+ <a href = "url" class="styleLink">  JOBS</a>
+ <a href = "url" class="styleLink">  PRIVACY</a>
+ <a href = "url" class="styleLink">  TERMS</a>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <span class="styleTrademark"> &copy; 2014 INSTAGRAM</span>
+</footer>
 </body>
 </html>
