--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,66 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <!-- HEADER CONTAINS LOGO AND LOGIN - BLUE BACKGROUND -->
+  <header>
+    <div class="logo">
+      <img src="./images/brand.png">
+    </div>
+    <div class="logIn">
+      <ul>
+        <li>LogIn</li>
+      </ul>
+    </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <!-- SECTION CONTAINS ALL THE CONTENT AND PHONE- IMAGE BACKGROUND -->
+  <section>
+    <div class="phones">
+      <img src="./images/phones.png">
+    </div>
+    <div class="contentAll">
+      <div class="contentHeader">
+        <h1>Capture and Share the World's Moments</h1>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="contentText">
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="appStore">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="androidStore">
+          <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
+  </section>
 
-  &copy; 2014 Instagram
+
+  <!-- FOOTER CONTAINS MENU AND COPYRIGHT - IMAGE BACKGROUND -->
+  <footer>
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+      </ul>
+    <div class="copyRight">
+      <span>&copy; 2014 Instagram</span>
+    </div>
+  </footer>
 </body>
 </html>
