--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background"></div>
+  <img class="phone" src="./images/phones.png">
+  
+  <div class="container">
+    <div >
+        <img class="logo" src="./images/brand.png">
+        <button class="login"><img src="./images/home.png"> Log in</button>
+    </div>
+      <div class="clearfix"></div>
+    <div class="content-box">
+      <h1> Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <a href="https://itunes.apple.com/es/app/instagram/id389801252?mt=8"><img src="./images/badge-iphone.png"></a>
+      <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"><img src="./images/badge-android.png"></a>
+    </div>
+  </div>
+  <div class="clearfix"></div>
+  <footer>
+    <div class="footer-content">
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </div>
+  </footer>
 </body>
 </html>
