--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class=blue>
+    <img id=phones src="images/phones.png">
+    <img id= "brand-image" src="images/brand.png">
+    <button id=home><img src="images/home.png" type="button">  Log in</button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
+
+
+  <div id="info">
+  <h2>Capture and Share <br> the World's Moments </h2>
+
+  <p>Instagram is a <b>fast, beautiful </b>and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
 
   Download on the App Store
-  Get it on Google Play
+  Get it on Google Play</p>
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+</div>
+<div id=footer>
+  <span>About Us</span>
+  <span>Support</span>
+  <span>Blog</span>
+  <span>Press</span>
+  <span>API</span>
+  <span>Jobs</span>
+  <span>Privacy</span>
+  <span>Terms</span>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <span id= copyright> &copy; 2014 Instagram</span>
+  </div>
 </body>
 </html>
