--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header></header>
+  <section id="landing">
+    <figure class="phones">
+      <img src="./images/phones.png" alt="iphones">
+    </figure>
+    <div class="container">
+      <div class="headline">
+        <figure>
+          <img src="./images/brand.png" alt="instagram">
+        </figure>
+        <button>
+          <img src="./images/home.png" alt="home">
+          Log In
+        </button>
+      </div>
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        <button>Download on the App Store</button>
+        <button>Get it on Google Play</button>
+      </div>
+    </div>
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright-brand">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
