--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="halfBack">
+  <div class="outterDiv">
+  <img src="images/phones.png" alt="Phones" class="photoImage clearfix">
+  <div class="innerDiv">
+  <img src="images/brand.png" alt=Brand class="brand">
+  <button type=submit class="logInButton"><img src="images/home.png" alt=Home> Log In</button>
+    <div class="whiteBackground">
+    <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
+        <br>  
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        <br>  
+        Oh yeah, did we mention it's free?</p>
+    </div>
+  </div>
+  <button type=submit><img src="images/badge-android.png" alt=Android></button>
+  <button type=submit><img src="images/badge-iphone.png" alt=Android></button>
+  </div>  
+  <footer class="footer"> 
+    <ul class="list">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    &copy; 2014 Instagram
+  </footer>  
+  </div>
 </body>
 </html>
