--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <header class="header">
+        <div class="div-header">
+            <img class="brand-img" src="./images/brand.png" alt="">
+            <div class="div-btn">
+                <button class="login-btn"> <img src="./images/home.png" alt=""> Log in</button>
+            </div>
+            
+        </div>
+    </header>
+    <img class="phone-img" src="./images/phones.png" alt="phones_image">
+    <section class="section-1">
+        <div class="s1-1">
+            <h2> Capture and Share the World's Moments</h2>
+            <p>
+                Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </p>
+            <p>
+                 Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.  
+            </p>
+            <p>
+                Oh yeah, did we mention it's free?
+            </p>
+        </div>
+       
+        <div class="s2-2">
+            <img class="bdg-android" src="./images/badge-android.png" alt="Get it on Google Play">
+            <img class="bdg-iphone" src="./images/badge-iphone.png" alt="Download on the App Store"> 
+        </div>
+    </section>
+    <section class="section-separator">
+    </section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer class="footer">
+        <ul class="footer-links">
+            <li><a>About Us</a></li>
+            <li><a>Support</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Press</a></li>
+            <li><a>Jobs</a></li>
+            <li><a>Privacy</a></li>
+            <li><a>Terms</a></li>
+            <li><a>&copy; 2014 Instagram</a></li>
+        </ul>
+    </footer>
+    </body>
 </html>
