--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="topDiv">
+      <img src="images/brand.png" alt="brand logo" id="brandImage">
+     <button><img src="./images/home.png" alt="log in pic" class="loginImage">Log in</button>
+  </div>
+  <div class="iphoneImage">
+    <img src="images/phones.png" class="phoneImages">
+  </div>
+  <div class="bottomDiv">
+  <div class="whiteTextBox">
+    <div class="whiteTextBox-text">
+  <h2>Capture and Share <br>the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+  <div class="pictureButtons">
+    <img src="./images/badge-android.png"/>
+    <img src="./images/badge-iphone.png"/>
+  </div>
+</div>
+</div>
+</div>
+<footer class="bottomOfTheBottom">
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
