--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,27 +7,29 @@
   </head>
   <body>
     <section>
-      <div class="cellphone">
-        <img src="images/phones.png" alt="Download Instagram app" />
-      </div>
       <div class="container">
-        <div class="instaLogin">
-          <img src="images/brand.png" alt="Instagram" />
-          <button><span class="homeIcon"></span>Log in</button>
+        <div class="cellphone">
+          <img src="images/phones.png" alt="Download Instagram app" />
         </div>
-        <div class="description">
-          <h3>Capture and Share the World's Moments</h3>
-          <p>
-            Instagram is a fast, beautiful and fun way to share your life with
-            friends and family.
-          </p>
-          <p>
-            Take a picture or video, choose a filter to transform its look and
-            feel, then post to Instagram &mdash; it's that easy. You can even
-            share to Facebook, Twitter, Tumblr and more. It's a new way to see
-            the world.
-          </p>
-          <p>Oh yeah, did we mention it's free?</p>
+        <div class="mainInfo">
+          <div class="instaLogin">
+            <img src="images/brand.png" alt="Instagram" />
+            <button><span class="homeIcon"></span>Log in</button>
+          </div>
+          <div class="description">
+            <h3>Capture and Share the World's Moments</h3>
+            <p>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
         </div>
       </div>
     </section>
