--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,6 +30,10 @@
             </p>
             <p>Oh yeah, did we mention it's free?</p>
           </div>
+          <div class="store">
+            <img src="images/badge-iphone.png" alt="Download on App Store" />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
         </div>
       </div>
     </section>
