--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+	<div class="image-container">
+		Image
+	</div>
+  <header>
+		<h1>Instagram</h1>
+	</header>
+	<div class="information">
+		<h2>Capture and Share the World's Moments</h2>
+		<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+		<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+		<p>Oh yeah, did we mention it's free?</p>
+		<div class="app-download">
+			<img src="#" alt="Download on the App Store">
+			<img src="#" alt="Get it on Google Play">
+		</div>
+	</div>
+  <footer>
+		About Us
+		Support
+		Blog
+		Press
+		API
+		Jobs
+		Privacy
+		Terms
+		&copy; 2014 Instagram
+	</footer>
 </body>
 </html>
