--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,20 +8,27 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="image-container">
-		Image
-	</div>
-  <header>
-		<h1>Instagram</h1>
-	</header>
-	<div class="information">
-		<h2>Capture and Share the World's Moments</h2>
-		<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-		<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-		<p>Oh yeah, did we mention it's free?</p>
-		<div class="app-download">
-			<img src="#" alt="Download on the App Store">
-			<img src="#" alt="Get it on Google Play">
+	<div class="wrapper">
+		<div class="image-container">
+			<img src="images/phones.png" alt:"Phones">
+		</div>
+		<div class="text-container">
+			<div>
+				<img src="images/brand.png" alt="Instagram app">
+			</div>
+			<div>
+				<img src="images/home.png" alt="Log in button">
+			</div>
+			<div class="information">
+				<h2>Capture and Share the World's Moments</h2>
+				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+				<p>Oh yeah, did we mention it's free?</p>
+				<div class="app-download">
+					<img src="#" alt="Download on the App Store">
+					<img src="#" alt="Get it on Google Play">
+				</div>
+			</div>
 		</div>
 	</div>
   <footer>
