--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main-div">
+    <!-- Content -->
+    <div class="main-img-content">
+      <div class="cell-img">
+        <img src="./images/phones.png" alt="">
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="content">
+        <div class="">
+          Instagram
+        </div>
+        <div class="">
+          Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?
+        </div>
+        <div class="">
+          Download on the App Store
+          Get it on Google Play
+        </div>
+      </div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <!-- Directory -->
+    <div class="main-directory">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
